🔧 build (path) : update Vite configuration and add "build" uril path for Logic Lab

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Logic Lab adalah penyedia jasa pembuatan website profesional yang menghadirkan solusi web modern, responsif, dan sesuai kebutuhan. Di Logic Lab, kami percaya bahwa website bukan sekadar tampilan, tetapi juga alat yang mampu meningkatkan visibilitas dan produktivitas bisnis Anda. Percayakan kebutuhan website Anda kepada kami, dan wujudkan ide digital Anda bersama Logic Lab!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm create @vuelatest"
   },
   "repository": {
     "type": "git",
