--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/cli": "^4.0.14",
     "@tailwindcss/vite": "^4.0.12",
-    "tailwindcss": "^4.0.12",
+    "tailwindcss": "^4.0.14",
     "vue": "^3.5.13"
   },
   "devDependencies": {
